Add: endpoint to post expense lists and expenses
