# docs/swagger.yaml
@@ -8,8 +8,33 @@ definitions:
         type: string
       description:
         type: string
+      expenseListId:
+        type: string
+      id:
+        type: string
       participants:
         type: string
+    type: object
+  models.ExpenseList:
+    properties:
+      color:
+        type: string
+      creatorId:
+        type: string
+      currency:
+        type: string
+      emoji:
+        type: string
+      expenses:
+        items:
+          $ref: '#/definitions/models.Expense'
+        type: array
+      id:
+        type: string
+      title:
+        type: string
+      totalCost:
+        type: number
     type: object
 host: localhost:3000
 info:
@@ -18,7 +43,47 @@ info:
   title: Equaly Backend
   version: "1.0"
 paths:
-  /user-expense-lists:
+  /expense:
+    post:
+      description: Creates a new Expense for an Expense List
+      parameters:
+      - description: Expense Data
+        in: body
+        name: expense
+        required: true
+        schema:
+          $ref: '#/definitions/models.Expense'
+      responses:
+        "200":
+          description: Success
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Create Expense
+      tags:
+      - Expenses
+  /expense-list:
+    post:
+      description: Creates a new Expense list with given data for a specified user
+      parameters:
+      - description: Expense List Data
+        in: body
+        name: expenseList
+        required: true
+        schema:
+          $ref: '#/definitions/models.ExpenseList'
+      responses:
+        "200":
+          description: Success
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Create Expense List
+      tags:
+      - Expenses
+  /expense-lists:
     get:
       description: Retrieves the list of expenses for a specified user.
       parameters:
