# models/expense.go
@@ -1,8 +1,10 @@
 package models
 
 type Expense struct {
-	Buyer        string  `json:"buyer"`
-	Amount       float64 `json:"amount"`
-	Description  string  `json:"description"`
-	Participants string  `json:"participants"`
+	ID            string  `json:"id"`
+	ExpenseListId string  `json:"expenseListId"`
+	Buyer         string  `json:"buyer"`
+	Amount        float64 `json:"amount"`
+	Description   string  `json:"description"`
+	Participants  string  `json:"participants"`
 }
